k8s/openshift-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: smartbancs-api
  namespace: smartbancs
spec:
  to:
    kind: Service
    name: smartbancs-api
  port:
    targetPort: 80
  tls:
    termination: edge
